# src/accounts/dto/search-account.dto.ts
@@ -1,0 +1,43 @@
+import { ApiPropertyOptional } from "@nestjs/swagger";
+import { IsOptional, IsString, IsNumber, Min, IsIn } from "class-validator";
+
+export class AccountSearchDto {
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    name?: string;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    industry?: string;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    website?: string;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsNumber()
+    @Min(1)
+    page?: number = 1;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsNumber()
+    @Min(1)
+    limit?: number = 10;
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    @IsIn(['name', 'industry', 'website', 'id'])
+    sortBy?: string = 'id';
+
+    @ApiPropertyOptional()
+    @IsOptional()
+    @IsString()
+    @IsIn(['asc', 'desc'])
+    sortOrder?: 'asc' | 'desc' = 'asc';
+  }
